# ParetoCalculator

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  LICENSE  ParetoCalculator.sln  README.md  README_LINUX.md  README_LINUX.txt  README_WIN.md  README_WIN.txt
ParetoCalculator/: AssemblyInfo.cpp  MainForm.cpp  MainForm.h  MainForm.resx  ParetoCalculator.cpp  ParetoCalculator.vcxproj  ParetoCalculator.vcxproj.filters  app.aps  app.rc  globals.h  statusmediator.cpp  statusmediator.h  stdafx.cpp
ParetoCalculator/calculator/: calculator.cpp  calculator.h  configuration.cpp  configuration.h  exceptions.cpp  exceptions.h  operations.cpp  operations.h  paretoparser_libxml.cpp  paretoparser_libxml.h  paretoparser_vs.cpp  paretoparser_vs.h  quantity.cpp  quantity.h  storage.cpp  storage.h  support.h  utils_libxml.cpp  utils_libxml.h
ParetoCalculator/dialogs/: AboutDialog.cpp  AboutDialog.h  AbstractionDialog.cpp  AbstractionDialog.h  JoinDialog.cpp  JoinDialog.h  PlotDialog.cpp  PlotDialog.h  SaveDialog.cpp  SaveDialog.h  SelectionDialog.cpp  SelectionDialog.h  StoreDialog.cpp  StoreDialog.h  SumDialog.cpp  SumDialog.h  prodcons.cpp  prodcons.h
ParetoCalculator/excel/: ExcelAutomation.cpp  ExcelAutomation.h
ParetoCalculator/test/: betsy.xml
ParetoCalculator/utils/: globals.h  statusmediator.h  utils_vs.cpp  utils_vs.h
ParetoCalculatorApp/: .gitignore  AboutDialog.xaml  AboutDialog.xaml.cpp  AboutDialog.xaml.h  App.xaml  App.xaml.cpp  App.xaml.h  MainPage.xaml  MainPage.xaml.cpp  MainPage.xaml.h  Package.appxmanifest  ParetoCalculatorApp.vcxproj  ParetoCalculatorApp.vcxproj.filters
ParetoCalculatorConsole/: .gitignore  CMakeLists.txt  ParetoCalculatorConsole.vcxproj  ParetoCalculatorConsole.vcxproj.filters  paretocalccons.cpp  pcconsole.cpp  pcconsole.h
ParetoCalculatorLibrary/: .gitignore  ExternalLibraries.props  ParetoCalculatorLibrary.vcxproj
ParetoCalculatorLibrary/src/: CMakeLists.txt  calculator.cpp  calculator.h  configuration.cpp  configuration.h  exceptions.cpp  exceptions.h  operations.cpp  operations.h  paretoparser_libxml.cpp  paretoparser_libxml.h  quantity.cpp  quantity.h  storage.cpp  storage.h  support.h  utils_libxml.cpp  utils_libxml.h
ParetoCalculatorLibrary/src/obsolete/: msxmlsupport.h  paretoparser_vs.cpp  paretoparser_vs.h  utils_vs.h
ParetoCalculatorTest/: .gitignore  ParetoCalculatorTest.vcxproj  ParetoCalculatorTest.vcxproj.filters
ParetoCalculatorUI/: AboutDialog.xaml  AboutDialog.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ParetoCalculatorUI.csproj  packages.config
ParetoCalculatorUI/Dialogs/: AboutDialog.xaml  AboutDialog.xaml.cs  AbstractDialog.xaml  AbstractDialog.xaml.cs  DerivedOperatorDialog.xaml  DerivedOperatorDialog.xaml.cs  GraphDialog.xaml  GraphDialog.xaml.cs  JoinDialog.xaml  JoinDialog.xaml.cs  MessageDialog.xaml  MessageDialog.xaml.cs  ProdConsDialog.xaml  ProdConsDialog.xaml.cs  SelectionDialog.xaml  SelectionDialog.xaml.cs  StoreDialog.xaml  StoreDialog.xaml.cs
ParetoCalculatorUI/Properties/: Settings.Designer.cs
ParetoCalculatorUI/Resources/: Styles.xaml
ParetoCalculatorUI/Utils/: Charts.cs  EdgeLauncher.cs  Exceptions.cs  HTMLLauncher.cs
ParetoCalculatorUI/html/: charttemplate.html
ParetoCalculatorWrapper/: .gitignore  ParetoCalculatorW.cpp  ParetoCalculatorW.h  ParetoCalculatorWrapper.vcxproj  ParetoCalculatorWrapper.vcxproj.filters  StatusCollectorW.cpp  StatusCollectorW.h  StatusMediatorW.h
ParetoCalculatorWrapper/utils/: utils_vs.cpp  utils_vs.h
doc/: CMakeLists.txt  doxy.cfg  paretospec.xsd
doc/media/: logo.ai
dsl/: readme.md
dsl/eclipse-workspace/: .gitignore
dsl/eclipse-workspace/org.xtext.paretoalgebra.calculator.parent/: build.gradle  settings.gradle
dsl/examples/: spec.pareto
dsl/vscode/syntaxes/: pareto.tmGrammar.json
examples/: betsy.pareto  betsy.xml
html/: chart.html
src/ParetoCalculatorConsole/: pcconsole.h
src/ParetoCalculatorLibrary/: .gitignore  ParetoCalculatorLibrary.vcxproj.filters
src/ParetoCalculatorLibrary/src/: CMakeLists.txt  calculator.cpp  configuration.h  exceptions.cpp  exceptions.h  operations.h  paretoparser_libxml.cpp  paretoparser_libxml.h  quantity.h  storage.cpp  storage.h  support.h  utils_libxml.cpp
src/ParetoCalculatorUI/: App.xaml  App.xaml.cs  ParetoCalculatorUI.csproj
src/ParetoCalculatorWrapper/: ParetoCalculatorExceptionW.cpp  ParetoCalculatorExceptionW.h  ParetoCalculatorW.cpp  ParetoCalculatorW.h  ParetoCalculatorWrapper.vcxproj  StatusCollectorW.cpp
src/tests/: .gitignore  CMakeLists.txt  run_test.cmake
src/tests/blessed_output/: TestBetsyoutput.output
src/tests/scripts/: compareoutput
test/: test_simple_cull.xml
tests/: .gitignore  CMakeLists.txt  run_test.cmake
tests/blessed_output/: TestBetsyoutput.output  readme.txt
tests/output/: readme.txt
(+37 files in other folders)
